<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_format_list_bulleted_white_24dp"
        android:title="@string/title_list" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_create_white_24dp"
        android:title="@string/title_create" />

    <item
        android:id="@+id/navigation_read"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/title_read" />

    <item
        android:id="@+id/navigation_update"
        android:icon="@drawable/ic_update_white_24dp"
        android:title="@string/title_update" />

    <item
        android:id="@+id/navigation_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/title_delete" />
</menu>
